--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,5 @@
-#nav {
-    position: fixed !important;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 35px;
-    padding-top: 15px;
-    box-shadow: 0px 0px 8px 0px;
-  
-  }
   .app-component {
+    margin: 64px;
     display: flex;
     flex-direction: column;
   }
